Fix background size
When the snippet is big the editor overflows the background and the app appears broken http://joxi.ru/DrlqQXDHyZ150m

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -44,7 +44,6 @@ body {
 
 @media screen and (min-width: 960px) {
   .app {
-    height: 100vh;
     padding: 32px;
   }
 }
